<resources>
    <string name="app_name">Soimah</string>
    <string name="title_home">Home</string>
    <string name="title_rfid">RFID</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperatur">Temperatur</string>
    <string name="kelembaban">Kelembaban</string>
    <string name="lampu">Lampu</string>
    <string name="ruang_tamu">Ruang Tamu</string>
    <string name="dapur">Dapur</string>
    <string name="teras">Teras</string>
    <string name="ruang_utama">Ruang Utama</string>
    <string name="kamar_mandi">Kamar Mandi</string>
    <string name="lampu_kamar_anak">Lampu Kamar Anak</string>
    <string name="ruang_keluarga">Ruang Keluarga</string>
    <string name="off_on">OFF/ON</string>
    <string name="ruangan">Ruangan</string>
</resources>
